hover on mobile issue for tiles

--- a/css/tweak_mobile.css
+++ b/css/tweak_mobile.css
@@ -273,6 +273,10 @@
     text-align:center;
     vertical-align: middle; 
 }
+      
+.mobiletxt-body{
+    font-size: 3px;
+}
 
 .people{
     width:100%;
